external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_infix_and_postfix.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_infix_and_postfix.move:5:34
  │
5 │     struct Foo has copy, drop {} has store;
  │                                  ^^^ Postfix abilities are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/ability_modifier_infix_and_postfix.move:5:34
  │
5 │     struct Foo has copy, drop {} has store;
  │                ---               ^^^ Duplicate ability declaration. Abilities can be declared before or after the field declarations, but not both.
  │                │                  
  │                Ability declaration previously given here

